--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@
 paths:
   raw_data: "data/raw"               # dossier contenant HR/ et LR/
   output_root: "data/preprocessed"   # dossier final après split + patching
+  checkpoints: "src/models/checkpoints" 
 
 dataset:
   scale: 4
@@ -15,3 +16,21 @@ dataset:
 
 # optionnel : seed pour reproductibilité
 random_seed: 42
+
+
+training:
+  batch_size: 64
+  num_workers: 8
+  epochs: 10
+  lr: 0.0001
+  weight_decay: 0.0
+  scheduler_step_size: 20   # StepLR: tous les 20 epochs
+  scheduler_gamma: 0.5      # LR = LR * 0.5
+  use_augmentation: true    # data augmentation sur le train
+
+
+
+
+model:
+  name: "srcnn"
+  best_model_path: "src/models/checkpoints/best_srcnn.pth"  
