--- a/config.yaml
+++ b/config.yaml
@@ -19,8 +19,8 @@ random_seed: 42
 
 
 training:
-  batch_size: 128
-  num_workers: 12
+  batch_size: 64
+  num_workers: 8
   epochs: 10
   lr: 0.0001
   weight_decay: 0.0
@@ -32,5 +32,5 @@ training:
 
 
 model:
-  name: "srcnn"
-  best_model_path: "src/models/checkpoints/best_srcnn.pth"  
+  best_SRCNN_path: "src/models/checkpoints/best_srcnn.pth"  
+  best_EDSR_path: "src/models/checkpoints/best_EDSR.pth"
