--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# data/raw/
-data/preprocessed/
-src/utils/__pycache__
-
-
 data/raw/HR/*
 data/raw/LR/*
+data/preprocessed/
+
+
+src/utils/__pycache__
+src/models/__pycache__
+src/models/__pycache__
