updated autocast to the recommanded version for pytorch 2+

--- a/config.yaml
+++ b/config.yaml
@@ -34,3 +34,4 @@ training:
 model:
   best_SRCNN_path: "src/models/checkpoints/best_srcnn.pth"  
   best_EDSR_path: "src/models/checkpoints/best_EDSR.pth"
+  best_SRESNET_path: "src/models/checkpoints/best_SRESNET.pth"
