--- a/config.yaml
+++ b/config.yaml
@@ -35,3 +35,7 @@ model:
   best_SRCNN_path: "src/models/checkpoints/best_srcnn.pth"  
   best_EDSR_path: "src/models/checkpoints/best_EDSR.pth"
   best_SRESNET_path: "src/models/checkpoints/best_SRESNET.pth"
+
+
+history:
+  SRESNET_history : "src/models/srresnet_history.json"
