--- a/config.yaml
+++ b/config.yaml
@@ -32,10 +32,11 @@ training:
 
 
 model:
-  best_SRCNN_path: "src/models/checkpoints/best_srcnn.pth"  
-  best_EDSR_path: "src/models/checkpoints/best_EDSR.pth"
+  best_SRCNN_path: "src/models/checkpoints/SRCNN/best_srcnn.pth"  
+  best_EDSR_path: "src/models/checkpoints/EDSR/best_EDSR.pth"
   best_SRESNET_path: "src/models/checkpoints/SRESNET/best_SRESNET.pth"
 
 
 history:
-  SRESNET_history : "src/models/checkpoints/SRESNET/srresnet.json"
+  SRESNET_history_path : "src/models/checkpoints/SRESNET/srresnet.json"
+  EDSR_history_path : "src/models/checkpoints/EDSR/edsr_training_history.json"
