--- a/config.yaml
+++ b/config.yaml
@@ -33,10 +33,22 @@ training:
 
 model:
   best_SRCNN_path: "src/models/checkpoints/SRCNN/best_srcnn.pth"  
+
   best_EDSR_path: "src/models/checkpoints/EDSR/best_EDSR.pth"
+  best_EDSR_v1_path: "src/models/checkpoints/EDSR_v1/best_EDSR_v1.pth"
+
+  best_EDSR_PRO_path: "src/models/checkpoints/EDSR_PRO/best_EDSR_PRO.pth"
+
   best_SRESNET_path: "src/models/checkpoints/SRESNET/best_SRESNET.pth"
 
 
 history:
-  SRESNET_history_path : "src/models/checkpoints/SRESNET/srresnet.json"
+  SRCNN_history_path: "src/models/checkpoints/SRCNN/srcnn_training_history.json" 
+
+
   EDSR_history_path : "src/models/checkpoints/EDSR/edsr_training_history.json"
+  EDSR_v1_history_path : "src/models/checkpoints/EDSR_v1/edsr_v1_training_history.json"
+
+  EDSR_PRO_history_path : "src/models/checkpoints/EDSR_PRO/edsr_PRO_training_history.json"
+
+  SRESNET_history_path : "src/models/checkpoints/SRESNET/srresnet.json"
