--- a/config.yaml
+++ b/config.yaml
@@ -21,12 +21,12 @@ random_seed: 42
 training:
   batch_size: 64
   num_workers: 8
-  epochs: 1
+  epochs: 70
   lr: 0.0001
   weight_decay: 0.0
   scheduler_step_size: 20   # StepLR: tous les 20 epochs
   scheduler_gamma: 0.5      # LR = LR * 0.5
-  use_augmentation: true    # data augmentation sur le train
+  use_augmentation: True    # data augmentation sur le train
 
 
 
