--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ data/preprocessed/
 src/models/__pycache__
 src/utils/__pycache__
 src/models/checkpoints 
-
+notebooks/yasser/__pycache__/custom_model.cpython-312.pyc
