--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,7 @@ model:
   best_EDSR_v1_path: "src/models/checkpoints/EDSR_v1/best_EDSR_v1.pth"
 
   best_EDSR_PRO_path: "src/models/checkpoints/EDSR_PRO/best_EDSR_PRO.pth"
+  last_EDSR_PRO_path: "src/models/checkpoints/EDSR_PRO/last_EDSR_PRO.pth"
 
   best_SRESNET_path: "src/models/checkpoints/SRESNET/best_SRESNET.pth"
   last_SRESNET_path: "src/models/checkpoints/SRESNET/last_SRESNET.pth"
